fix comment-btn not visible on view-pages

--- a/less/viewdetails.less
+++ b/less/viewdetails.less
@@ -129,7 +129,7 @@
 }
 
 .view-details-section {
-  height: 73%;
+  display: inline-block;
   margin-left: 3%;
   width: 91%;
   padding-bottom: 200px;
@@ -675,7 +675,7 @@ app-add-association {
 }
 
 .scroll-top-btn {
-  margin: 100px calc(~"50% - 40px");
+  margin: 0 calc(~"50% - 40px") 100px calc(~"50% - 40px");
 }
 .view-details-wrapper {
   width:  100%;
